--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="refresh" content="0;url=demo/" />
-    <title>icon-toggle</title>
+    <meta name="google-signin-client_id" content="395414529497-pu4n5mndjg6s0euol41rljpdvhlooe73.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
   </head>
   <body>
     <!--
