--- a/demo/index.html
+++ b/demo/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="google-signin-client_id" content="395414529497-pu4n5mndjg6s0euol41rljpdvhlooe73.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script type="module" src="demo-element.js"></script>
   </head>
   <body>
-    <demo-element></demo-element>
+    
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
   </body>
 </html>
